--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,10 @@ dependencies:
 
 
 
+  google_sign_in: ^6.0.2
+  modal_progress_hud_nsn: ^0.3.0
+  equatable: ^2.0.5
+  flutter_bloc: ^8.1.2
 
   flutter_spinkit: ^5.1.0
 
@@ -88,6 +92,7 @@ flutter:
     - assets/images/Hunzaimg.png
     - assets/images/Notifyicon.png
     - assets/locations.json
+    - assets/image/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
